--- a/ck-lib/build.gradle
+++ b/ck-lib/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     //    compile 'in.srain.cube:ultra-ptr:1.0.11'
     testCompile 'org.testng:testng:6.9.6'
     testCompile 'junit:junit:4.12'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'com.alibaba:fastjson:1.2.16'
 }
