--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,5 +17,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ui.activity.TestActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait"/>
+
     </application>
 </manifest>
