完善启动页，登录也，完成信息页网络请求和业务逻辑

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,8 @@
         <!-- 主页面 -->
         <activity android:name=".ui.activity.MainActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:launchMode="singleTask"/>
 
         <!-- 完善信息页面 -->
         <activity android:name=".ui.activity.SupplementInfoActivity"
