--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,5 +86,17 @@
         <activity android:name=".ui.activity.PhoneNumChangeActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait"/>
+        <!-- 地址修改页面 -->
+        <activity android:name=".ui.activity.AddressChangeActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait"/>
+        <!-- 性别修改页面 -->
+        <activity android:name=".ui.activity.SexChangeActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait"/>
+        <!-- 添加亲友页面 -->
+        <activity android:name=".ui.activity.AddRelativesAccount"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait"/>
     </application>
 </manifest>
