修正退出登录逻辑 增加登录页面默认手机号 调整登录、完善信息页面启动模式 修正时间选择器bug 修正照片模块请求权限产生空指针的bug 添加图片查看器填充模式

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
         <!-- 登录页面 -->
         <activity android:name=".ui.activity.LoginActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:screenOrientation="portrait"/>
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" />
 
         <!-- 主页面 -->
         <activity android:name=".ui.activity.MainActivity"
@@ -51,6 +52,7 @@
         <!-- 完善信息页面 -->
         <activity android:name=".ui.activity.SupplementInfoActivity"
             android:configChanges="keyboardHidden|orientation"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait"/>
 
 <!-- 测试页面 -->
