--- a/ck-lib/build.gradle
+++ b/ck-lib/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'com.alibaba:fastjson:1.2.16'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
