增加会所相册 调整相册UI 调整跳转逻辑

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -144,8 +144,12 @@
         <activity android:name=".ui.activity.EditTabActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait"/>
-        <!-- 编辑标签 -->
+        <!-- 上传图片 -->
         <activity android:name=".ui.activity.photo.UploadPhotoActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait"/>
+        <!-- 群组照片 -->
+        <activity android:name=".ui.activity.photo.AlbumPhotoActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait"/>
     </application>
