--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -113,7 +113,7 @@
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait"/>
         <!-- 健康详情页面 -->
-        <activity android:name=".ui.activity.health.HealthInfoActivity"
+        <activity android:name=".ui.activity.health.HealthInfoInActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait"/>
         <!-- 活动列表 -->
@@ -175,6 +175,10 @@
             android:screenOrientation="portrait"/>
         <!-- 关系账户列表 -->
         <activity android:name=".ui.activity.user.RelateListActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait"/>
+        <!-- 出会所后健康页面详情 -->
+        <activity android:name=".ui.activity.health.HealthInfoAfterActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait"/>
     </application>
