--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,7 +81,7 @@
             android:screenOrientation="portrait"/>
 
         <!-- 成长文章详细页面 -->
-        <activity android:name=".ui.activity.ArticalDetailActivity"
+        <activity android:name=".ui.activity.ArticleDetailActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait"/>
         <!-- 昵称修改页面 -->
