--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,17 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
+        signingConfigs {
+            debug {
+                storeFile file('debug.keystore')
+                storePassword "android"
+                keyAlias "androiddebugkey"
+                keyPassword "android"
+            }
+        }
     }
+
 }
 
 dependencies {
@@ -28,5 +38,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile project(path: ':ck-lib')
     compile 'com.android.support:support-v13:24.0.0-alpha2'
-    compile files('src/main/libs/umeng_social_sdk.jar')
+    compile files('src/main/libs/SocialSDK_QQZone_3.jar')
+    compile files('src/main/libs/SocialSDK_umengqq.jar')
+    compile files('src/main/libs/SocialSDK_umengwx.jar')
+    compile files('src/main/libs/SocialSDK_WeiXin_2.jar')
+    compile files('src/main/libs/umeng_social_api.jar')
+    compile files('src/main/libs/umeng_social_net.jar')
+    compile files('src/main/libs/umeng_social_view.jar')
 }
