调通自动耿林逻辑 修改签到逻辑 添加activity关闭时释放Glide内存

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -183,7 +183,12 @@
             android:windowSoftInputMode="adjustPan"
             android:screenOrientation="portrait"/>
         <!-- 增加疫苗提醒 -->
-        <activity android:name=".ui.activity.question.AddMedicineRemindActivity"
+        <activity android:name=".ui.activity.user.AddMedicineRemindActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:windowSoftInputMode="adjustPan"
+            android:screenOrientation="portrait"/>
+        <!-- 更新页面 -->
+        <activity android:name=".ui.controlversion.AppUpdateWindow"
             android:configChanges="keyboardHidden|orientation"
             android:windowSoftInputMode="adjustPan"
             android:screenOrientation="portrait"/>
