修复分享链接时没有设置描述不能分享的bug 修改上传任务日志 修改图片预览详情中删除图片流程 修复亲友账户不能选角色的bug 添加主页照片为空时不能分享 添加主页照片背景为空时不能跳转 修改照片模块获取数据时机 修改提问页面下面电话的颜色和描述换行 修改ImageViewer的缩放机制

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,7 +89,7 @@
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait"/>
         <!-- 添加亲友页面 -->
-        <activity android:name=".ui.activity.user.AddRelativesAccount"
+        <activity android:name=".ui.activity.user.AddRelativesAccountActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait"/>
         <!-- 相册页面 -->
