--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0.4"
+        versionName "1.0.19"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -34,10 +34,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    testCompile 'junit:junit:4.12'
     compile project(path: ':ck-lib')
-    compile 'com.android.support:support-v13:24.0.0-alpha2'
     compile files('src/main/libs/SocialSDK_QQZone_3.jar')
     compile files('src/main/libs/SocialSDK_umengqq.jar')
     compile files('src/main/libs/SocialSDK_umengwx.jar')
@@ -45,4 +42,8 @@ dependencies {
     compile files('src/main/libs/umeng_social_api.jar')
     compile files('src/main/libs/umeng_social_net.jar')
     compile files('src/main/libs/umeng_social_view.jar')
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:support-v13:24.0.0-alpha2'
+    compile 'com.android.support:design:23.4.0'
+    testCompile 'junit:junit:4.12'
 }
