取消“健康分析” “我的健康”字体改为绿色 入住时间 产后时间文字间距，需做调整 个人，会所，查看照片底色需改成黑色 问答搜索更改与成长界面搜索相同 进入活动详情，标题应该显示“活动”，（实际是“内容”） 进入最新问题内容，标题应该显示“问答”，（实际是“内容”） 点击“成长妈妈知道”进入详情，标题应显示“成长” 文章内容标题更改为“成长” 文章内容标题更改为“月子餐”

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -219,10 +219,16 @@
             android:name=".ui.activity.question.SearchQuestionActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan|stateAlwaysVisible|stateVisible" />
         <!-- 搜索知识列表 -->
         <activity
             android:name=".ui.activity.question.SearchKnowledgeActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+        <!-- 搜索成长列表 -->
+        <activity
+            android:name=".ui.activity.question.SearchGrowUpActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
