健康里面的活动，知识那些地方的搜索没有和问答那块的一样，进去最上面的标题还是内容没有变。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -225,13 +225,19 @@
             android:name=".ui.activity.question.SearchKnowledgeActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan|stateAlwaysVisible|stateVisible" />
         <!-- 搜索成长列表 -->
         <activity
             android:name=".ui.activity.question.SearchGrowUpActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan|stateAlwaysVisible|stateVisible" />
+        <!-- 搜索知识列表 -->
+        <activity
+            android:name=".ui.activity.question.SearchActivitysActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan|stateAlwaysVisible|stateVisible" />
         <!-- 增加疫苗提醒 -->
         <activity
             android:name=".ui.activity.user.AddMedicineRemindActivity"
