--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:name=".BmApplication"
@@ -29,7 +30,7 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:replace="name,icon">
         <activity
-            android:name=".ui.activity.SplashActivity"
+            android:name=".ui.activity.TestActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait">
             <intent-filter>
