调试完成视频录制 添加问答和知识页面的点击反馈 添加代码混淆和无用资源清除 优化搜索页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:replace="name,icon">
         <activity
-            android:name=".ui.activity.TestActivity"
+            android:name=".ui.activity.SplashActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait">
             <intent-filter>
